# simplerad-backend

./: .gitignore  README.md  entities.py  explanation.py  frequency.py  pyproject.toml  run.sh  schemas.py  search.py  setup.cfg  simplerad.py  summarization.py  to_add  utils.py
conf/: config.yaml
conf/entities/: flair.yaml  simstring.yaml
conf/explanation/: gpt3.yaml
conf/frequency/: simstring.yaml  transformer.yaml
conf/search/: bm25.yaml  exact.yaml  faiss.yaml  simstring.yaml
conf/summarize/: transformer.yaml  transformer_abstractive.yaml  transformer_extractive.yaml
scripts/: add_entity.py  calculate_error_bins.py
src/simplerad/: schemas.py  simplerad.py  utils.py
src/simplerad/classification/: __init__.py  base.py  schemas.py  sentence_classification.py  text_classification.py
src/simplerad/conf/: config.yaml
src/simplerad/conf/entities/: flair.yaml  simstring.yaml
src/simplerad/conf/frequency/: transformer.yaml
src/simplerad/conf/prevalence/: global_local_adapter.yaml  global_sklearn.yaml
src/simplerad/conf/search/: bm25.yaml  dense.yaml  exact.yaml  simstring.yaml
src/simplerad/entities/: __init__.py  base.py  fuzzy.py  neural.py  schemas.py
src/simplerad/frequency/: __init__.py  base.py  embedding.py  schemas.py
src/simplerad/prevalence/: __init__.py  base.py  schemas.py  sklearn_models.py  transformer_models.py
src/simplerad/search/: __init__.py  base.py  bm25.py  dense.py  exact.py  fuzzy.py  schemas.py
src/simplerad/summarization/: __init__.py  abstractive.py  base.py  schemas.py
(+2 files in other folders)
