[metadata]
author = Koen Dercksen
author_email = mail@koendercksen.com
name = simplerad-backend
version = 0.1.0
description = Backend code for the SimpleRad application

[options]
zip_safe = False
package_dir =
    = src
packages = find:

[options.entry_points]
console_scripts =
    simplerad = simplerad.simplerad:main

[options.packages.find]
where = src