[metadata]
author = Koen Dercksen
author_email = mail@koendercksen.com
name = simplerad-backend
version = 0.1.0
description = Backend code for the SimpleRad application

[options]
zip_safe = False
package_dir =
    = src
packages = find:
install_requires =
    annoy
    fastapi
    flair
    gensim
    hydra-core
    nltk
    omegaconf
    pydantic
    simstring-pure
    spacy
    transformers
    uvicorn[standard]

[options.entry_points]
console_scripts =
    simplerad = simplerad.simplerad:main

[options.packages.find]
where = src
